plugins {
    id 'antlr'
    id 'java-gradle-plugin'
    id 'jacoco'
    id 'maven-publish'
    id 'signing'
    id 'org.owasp.dependencycheck' version '10.0.3'
    id 'com.github.spotbugs' version '6.1.0'
    id 'org.sonarqube' version '6.0.1.5171'
}

group = 'name.jurgenei.gradle'
version = '0.1.1'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    withSourcesJar()
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.antlr:antlr4-runtime:4.13.1'

    antlr 'org.antlr:antlr4:4.13.1'

    testImplementation 'org.antlr:antlr4-runtime:4.13.1'
    testImplementation gradleTestKit()
    testImplementation 'junit:junit:4.13.2'
}

gradlePlugin {
    plugins {
        antlrPlugin {
            id = 'name.jurgenei.gradle.antlr'
            implementationClass = 'name.jurgenei.gradle.antlr.XmlAstPlugin'
            displayName = 'Antlr XmlAst plugin'
            description = 'Converts source files to XML AST using pluggable ANTLR grammars.'
        }
    }
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java

            pom {
                name = 'ANTLR Plugin'
                description = 'Gradle plugin for ANTLR4 parser generation'
                url = 'https://github.com/jurgenei/gradle-antlr-plugin'

                licenses {
                    license {
                        name = 'MIT License'
                        url = 'https://opensource.org/licenses/MIT'
                    }
                }

                developers {
                    developer {
                        id = 'jurgenei'
                        name = 'Jurgen Hildebrand'
                    }
                }

                scm {
                    connection = 'scm:git:https://github.com/jurgenei/gradle-antlr-plugin.git'
                    developerConnection = 'scm:git:ssh://git@github.com/jurgenei/gradle-antlr-plugin.git'
                    url = 'https://github.com/jurgenei/gradle-antlr-plugin'
                }
            }
        }
    }

    repositories {
        mavenLocal()
    }
}

signing {
    required = gradle.taskGraph.hasTask("publish")
    def signingKey = findProperty("signingKey")
    def signingPassword = findProperty("signingPassword")
    if (signingKey && signingPassword) {
        useInMemoryPgpKeys(signingKey, signingPassword)
        sign publishing.publications.mavenJava
    }
}

// OWASP Dependency-Check configuration
dependencyCheck {
    format = 'HTML,JSON,XML'
    failBuildOnCVSS = 7.0
    suppressionFile = 'dependency-check-suppressions.xml'
    // enableExperimental = false

    // NVD API key configuration (improves scan speed by 30-50%)
    // Get key from: https://nvd.nist.gov/developers/request-an-api-key
    nvd {
        apiKey = findProperty('org.owasp.dependencycheck.nvd.api.key') ?: System.getenv('NVD_API_KEY')
        // apiDelay = 100  // Milliseconds between API calls (optional)
    }
}

// SpotBugs configuration
spotbugs {
    ignoreFailures = false
    effort = com.github.spotbugs.snom.Effort.valueOf('DEFAULT')
    reportLevel = com.github.spotbugs.snom.Confidence.valueOf('HIGH')
}

tasks.named('spotbugsMain') {
    reports {
        html.required = true
        xml.required = false
    }
}

// SonarQube configuration
sonar {
    properties {
        property "sonar.projectKey", "gradle-antlr-plugin"
        property "sonar.projectName", "Gradle ANTLR Plugin"
        property "sonar.sourceEncoding", "UTF-8"
        property "sonar.java.source", "21"
    }
}

tasks.withType(Test).configureEach {
    useJUnit()
}

jacoco {
    toolVersion = '0.8.12'
}

tasks.named('test') {
    finalizedBy tasks.named('jacocoTestReport')
}

tasks.named('jacocoTestReport') {
    dependsOn tasks.named('test')
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

tasks.named('jacocoTestCoverageVerification') {
    dependsOn tasks.named('jacocoTestReport')
    violationRules {
        rule {
            element = 'BUNDLE'
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.20
            }
        }
    }
}

tasks.register('coverage') {
    group = 'verification'
    description = 'Runs tests, generates JaCoCo report, and verifies minimum coverage threshold.'
    dependsOn tasks.named('jacocoTestCoverageVerification')
}

tasks.named('check') {
    dependsOn tasks.named('jacocoTestCoverageVerification')
}

// Aggregate security scanning task
tasks.register('allSecurityChecks') {
    group = 'verification'
    description = 'Run all security and quality checks (Dependency-Check, SpotBugs, SonarQube)'
    dependsOn tasks.named('check')
    dependsOn tasks.named('dependencyCheck')
    dependsOn tasks.named('spotbugsMain')
}

